--- a/frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
+++ b/frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
@@ -1,3 +1,27 @@
-<p *ngFor="let tempProduct of products">
-  {{tempProduct.name}}: {{tempProduct.unitPrice | currency:'EUR'}}
-</p>
+<table class="table">
+  <thead class="thead-dark">
+    <tr>
+      <th></th>
+      <th>Product</th>
+      <th>Price</th>
+      <th>Units in Stock</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <tr *ngFor="let tempProduct of products">
+      <td class="align-middle">
+        <img src="{{tempProduct.imageUrl}}" alt="Image"/>
+      </td>
+      <td class="align-middle">
+        {{tempProduct.name}}
+      </td>
+      <td class="align-middle">
+        {{tempProduct.unitPrice | currency:'EUR'}}
+      </td>
+      <td class="align-middle">
+        {{tempProduct.unitsInStock}}
+      </td>
+    </tr>
+  </tbody>
+</table>
