--- a/frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
+++ b/frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
@@ -5,14 +5,16 @@
 
         <!-- loop over the collection of products -->
         <div *ngFor="let tempProduct of products" class="col-md-3">
-
           <div class="product-box">
             <img src="{{ tempProduct.imageUrl }}" class="img-responsive" alt="No image available">
             <h1>{{ tempProduct.name }}</h1>
             <div class="price">{{ tempProduct.unitPrice | currency:'EUR' }}</div>
             <a href="#" class="primary-btn">Add to cart</a>
           </div>
+        </div>
 
+        <div *ngIf="products?.length <= 0" class="alert alert-warning col-md-12" role="alert">
+          No products found.
         </div>
       </div>
     </div>
